--- a/views/head.ejs
+++ b/views/head.ejs
@@ -2,5 +2,10 @@
 <html>
   <head>
     <title><%= title %></title>
+    <link rel='stylesheet' href='/bootstrap/css/bootstrap.min.css' />
+    <% for(var i=0; i<links.length; i++) { %>
+        <link rel='stylesheet' href='<%= links[i] %>' />
+    <% } %>
+   
   </head>
   <body>
